# hide_and_seek-randers

./: .gitignore  README.md  package-lock.json  package.json  playwright.config.js  pyproject.toml
.github/workflows/: deploy-pages.yml
docs/: README.md  implementation-plan.md
docs/datasets/: dagi-historical-kommune.md  dagi-opstillingskredse.md  dagi-postnumre.md  dagi-sogne.md  danish-basemap.md  dawa-addresses.md  midttrafik-fare-zones.md  rejseplanen-gtfs.md
scripts/: build_data.py  build_print_pdf.mjs  capture_outputs.mjs
src/hide_and_seek/: __init__.py  geometry.py  rules.py
tests/: test_rules.py
web/: index.html  print.html  vite.config.js
web-tests/: app.spec.js
web/public/data/: afstemningsomraader.geojson  boundary.geojson  eligible-stops.geojson  metadata.json  routes.geojson  sogne.geojson
web/src/: main.js  print.js  shared.js  style.css
